--- a/2bed/index.html
+++ b/2bed/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title>Plus Ayutthaya  Virtual Tour Room 2 Bed</title>
 	<meta property="og:title" content="Plus Ayutthaya  Virtual Tour Room 2bed." />
-	<meta property="og:url" content="https://pluscondo.github.io/connect/2bed.gif" />
+	<meta property="og:url" content="https://pluscondo.github.io/ayutthaya/2bed.gif" />
+	<meta property="og:image" content="https://pluscondo.github.io/ayutthaya/2bed.gif" />
 	<style>
 	 html, body, div, span, applet, object, iframe,
         h1, h2, h3, h4, h5, h6, p, blockquote, pre,
