--- a/facilities/index.html
+++ b/facilities/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Plus Ayutthaya  Virtual Tour Facilities</title>
 	<meta property="og:title" content="Plus Ayutthaya  Virtual Tour Facilities." />
-	<meta property="og:url" content="https://pluscondo.github.io/connect/facilities.gif" />
-  <meta property="og:image" content="https://pluscondo.github.io/connect/facilities.gif" />
+	<meta property="og:url" content="https://pluscondo.github.io/ayutthaya/facilities.gif" />
+  	<meta property="og:image" content="https://pluscondo.github.io/ayutthaya/facilities.gif" />
 	<style>
 	 html, body, div, span, applet, object, iframe,
         h1, h2, h3, h4, h5, h6, p, blockquote, pre,
